# whatslinks

./: README.md  main.py  pyproject.toml
src/: app.kv  app.py  utils.py
src/screens/: history.kv  history.py  home.kv  home.py  qrcode.kv  qrcode.py
