[tool.poetry]
name = "whatslinks"
version = "0.1.0"
description = "A simple app to create whatsapp links"
authors = ["Natanael dos Santos Feitosa <natansantosapps@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.1.0"
kivymd = {git = "https://github.com/kivymd/KivyMD.git"}

[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
